syntax = "proto3";

package api;

option go_package = "./devops";

service Devops {
  rpc GetMetricHandler(GetMetricRequest) returns (GetMetricResponse) {}
  rpc CreateMetricHandler(CreateMetricRequest) returns (CreateMetricResponse) {}
  rpc PingHandler(PingRequest) returns (PingResponse) {}
}

message PingRequest {}
message PingResponse {
  string resp = 1;
}

message CreateMetricRequest {
  string type = 1;
  string name = 2;
  string value = 3;
}
message CreateMetricResponse {
  string resp = 1;
}

message GetMetricRequest {
    string type = 1;
    string name = 2;
}
message GetMetricResponse {
    string val = 1;
}
